--- a/templates/nodecreate.template
+++ b/templates/nodecreate.template
@@ -81,10 +81,10 @@
             "Type": "String"
         },
         "QSS3KeyPrefix": {
-            "AllowedPattern": "^[0-9a-zA-Z-]+(/[0-9a-zA-Z-]+)*$",
-            "ConstraintDescription": "Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/). It cannot start or end with forward slash (/) because they are automatically appended.",
-            "Default": "latest",
-            "Description": "S3 key prefix for the Quick Start assets. Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/). It cannot start or end with forward slash (/) because they are automatically appended.",
+            "AllowedPattern": "^[0-9a-zA-Z-/]*$",
+            "ConstraintDescription": "Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/).",
+            "Default": "solace/vmr/latest/",
+            "Description": "S3 key prefix for the Quick Start assets. Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/).",
             "Type": "String"
         },
         "SubnetID": {
@@ -358,7 +358,7 @@
                             "/tmp/gen-cluster-hosts.sh": {
                                 "source": {
                                     "Fn::Sub": [
-                                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}/scripts/gen-cluster-hosts.sh",
+                                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}scripts/gen-cluster-hosts.sh",
                                         {
                                             "QSS3Region": {
                                                 "Fn::If": [
@@ -377,7 +377,7 @@
                             "/tmp/wait-for-child-resource.sh": {
                                 "source": {
                                     "Fn::Sub": [
-                                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}/scripts/wait-for-child-resource.sh",
+                                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}scripts/wait-for-child-resource.sh",
                                         {
                                             "QSS3Region": {
                                                 "Fn::If": [
@@ -396,7 +396,7 @@
                             "/tmp/wait-for-resource.sh": {
                                 "source": {
                                      "Fn::Sub": [
-                                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}/scripts/wait-for-resource.sh",
+                                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}scripts/wait-for-resource.sh",
                                         {
                                             "QSS3Region": {
                                                 "Fn::If": [
@@ -415,7 +415,7 @@
                             "/etc/init.d/solace-vmr": {
                                 "source": {
                                     "Fn::Sub": [
-                                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}/scripts/init.d/solace-vmr",
+                                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}scripts/init.d/solace-vmr",
                                         {
                                             "QSS3Region": {
                                                 "Fn::If": [
@@ -434,7 +434,7 @@
                             "/tmp/install-solace.sh": {
                                 "source": {
                                     "Fn::Sub": [
-                                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}/scripts/install-solace.sh",
+                                        "https://${QSS3BucketName}.${QSS3Region}.amazonaws.com/${QSS3KeyPrefix}scripts/install-solace.sh",
                                         {
                                             "QSS3Region": {
                                                 "Fn::If": [
@@ -578,7 +578,7 @@
                                 { "Ref": "ParentStackName" },
                                 "\n",
                                 "## Tag the instance (now that we're sure of launch index)\n",
-                                "instance_id=$(curl -f http://169.254.169.254/latest/meta-data/instance-id)\n",
+                                "instance_id=$(curl -f http://instance-data/latest/meta-data/instance-id)\n",
                                 "instance_tag=",{ "Ref": "ParentStackName" },"-",{ "Ref": "NodeDesignation" },"\n",
                                 " \n",
                                 "aws ec2 create-tags",
