--- a/templates/solace-vmr.template
+++ b/templates/solace-vmr.template
@@ -8,7 +8,8 @@
                     "Label": { "default": "Solace Parameters" },
                     "Parameters": [
                         "SolaceDockerURL",
-                        "AdminPassword"
+                        "AdminPassword",
+                        "ContainerLoggingFormat"
                     ]
                 },                
                 {
@@ -55,7 +56,10 @@
                 },
                 "AdminPassword": {
                     "default": "Password to access SolOS admin console and SEMP"
-                },                
+                },
+                "ContainerLoggingFormat": {
+                    "default": "Container logging format"
+                },
                 "BootDiskSize": {
                     "default": "Boot Disk Capacity (GiB)"
                 },
@@ -103,11 +107,23 @@
     },
     "Parameters": {
         "SolaceDockerURL": {
-            "Description": "Require URL to enterprise or Evaluation VMR, not Community",
+            "Description": "Required URL to enterprise or Evaluation VMR, not Community",
             "Type": "String"
         },
         "AdminPassword": {
-            "Description": "Require password to access SolOS admin console and SEMP",
+            "Description": "Required password to access SolOS admin console and SEMP",
+            "Type": "String"
+        },
+        "ContainerLoggingFormat": {
+            "AllowedValues": [
+                "graylog",
+                "legacy",
+                "raw",
+                "rfc5424"
+            ],
+            "ConstraintDescription": "Must be a valid container logging format.",
+            "Default": "graylog",
+            "Description": "Solace VMR logging format in CloudWatch",
             "Type": "String"
         },
         "BootDiskSize": {
@@ -359,6 +375,26 @@
                             ]
                         },
                         "PolicyName": "ec2-policy"
+                    },
+                    {
+                        "PolicyDocument": {
+                            "Version": "2012-10-17",
+                            "Statement": [
+                                {
+                                    "Action": [
+                                        "logs:CreateLogGroup",
+                                        "logs:CreateLogStream",
+                                        "logs:PutLogEvents",
+                                        "logs:DescribeLogStreams"
+                                    ],
+                                    "Resource": [
+                                        "arn:aws:logs:*:*:*"
+                                    ],
+                                    "Effect": "Allow"
+                                }
+                            ]
+                        },
+                        "PolicyName": "cloudwatch-policy"
                     }
                 ],
                 "Path": "/",
@@ -404,6 +440,9 @@
                     },
                     "AdminPassword": {
                         "Ref": "AdminPassword"
+                    },
+                    "ContainerLoggingFormat": {
+                        "Ref": "ContainerLoggingFormat"
                     },
                     "BootDiskSize": {
                         "Ref": "BootDiskSize"
@@ -483,6 +522,9 @@
                     "AdminPassword": {
                         "Ref": "AdminPassword"
                     },
+                    "ContainerLoggingFormat": {
+                        "Ref": "ContainerLoggingFormat"
+                    },
                     "BootDiskSize": {
                         "Ref": "BootDiskSize"
                     },
@@ -560,6 +602,9 @@
                     },
                     "AdminPassword": {
                         "Ref": "AdminPassword"
+                    },
+                    "ContainerLoggingFormat": {
+                        "Ref": "ContainerLoggingFormat"
                     },
                     "BootDiskSize": {
                         "Ref": "BootDiskSize"
