- Adding load balancer support with health-check (using Classic ELBs) - Adding new instance type (m4.4xlarge) - Adding new container cli/bash aliases

--- a/templates/nodecreate.template
+++ b/templates/nodecreate.template
@@ -55,7 +55,8 @@
                 "m3.xlarge",
                 "m4.large",
                 "m4.xlarge",
-                "c4.xlarge"
+                "c4.xlarge",
+                "m4.4xlarge"
             ],
             "ConstraintDescription": "Must be a valid EC2 instance type.",
             "Default": "t2.large",
