--- a/templates/solace-vmr-master.template
+++ b/templates/solace-vmr-master.template
@@ -157,7 +157,8 @@
                 "m3.xlarge",
                 "m4.large",
                 "m4.xlarge",
-                "c4.xlarge"
+                "c4.xlarge",
+                "m4.4xlarge"
             ],
             "ConstraintDescription": "Must be a valid EC2 instance type.",
             "Default": "t2.large",
@@ -213,7 +214,8 @@
                 "m3.xlarge",
                 "m4.large",
                 "m4.xlarge",
-                "c4.xlarge"
+                "c4.xlarge",
+                "m4.4xlarge"
             ],
             "ConstraintDescription": "Must be a valid EC2 instance type.",
             "Default": "t2.large",
