Added swap setup for smaller instance-types. Removed debug logging and cleaned up the code. Minor fixes to documentation.

--- a/templates/solace-vmr-master.template
+++ b/templates/solace-vmr-master.template
@@ -193,7 +193,7 @@
                 "false"
             ],
             "Default": "true",
-            "Description": "Whether to create and use Private Subnets with fronting ELBs",
+            "Description": "Whether to create and use Private Subnets with a fronting ELB",
             "Type": "String"
         },
         "RemoteAccessCIDR": {
