Adding carriage return to the end of password file. Exposing port 8080 to ELB. Fixing semp query password logic

--- a/templates/nodecreate.template
+++ b/templates/nodecreate.template
@@ -369,7 +369,9 @@
                         },
                         "files": {
                             "/mnt/vmr/secrets/solOSpasswd": {
-                                "content" : { "Ref": "AdminPassword" }
+                                "content": { "Fn::Join": [ "", [
+                                     { "Ref" : "AdminPassword" }, "\n"
+                                ] ] },
                             },
                             "/tmp/gen-cluster-hosts.sh": {
                                 "source": {
