--- a/templates/solace-vmr.template
+++ b/templates/solace-vmr.template
@@ -880,6 +880,10 @@
                     "LoadBalancerPort" : "80",
                     "InstancePort" : "80",
                     "Protocol" : "HTTP"
+                    },{
+                    "LoadBalancerPort" : "8080",
+                    "InstancePort" : "8080",
+                    "Protocol" : "HTTP"
                     }
                 ]
             }
